get info URL from test record directly (no use of prefixes and base URL)

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ limitations under the License.
       var infoTd = document.createElement('td');
       infoTd.className = 'emu';
       var infoA = document.createElement('a');
-      infoA.href = wikiPageBase + test.id;
+      infoA.href = test.info;
       infoA.innerHTML = 'info';
       infoTd.appendChild(infoA);
       row.appendChild(infoTd);
